fix(payment): fence provider query execution